--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm jhon paulino!</h1>
-				<p>I'm best known for my basketball skillss <em>and</em>trust me im good at it :basketball:. <a href="/about">Read more about my life...</a></p>
+				<p>I'm best known for my basketball skillss <em></em>trust me im good at it . <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
