--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>jhon paulino</title>
+		<title>Jhon paulino</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -17,7 +17,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm jhon paulino!</h2>
+        		<h1>Hi there, I'm Jhon Paulino!</h2>
 				<p>im best known for my basketball skills <em></em>trust me im good at it . <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
